add introduction of myself

--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 
-hello
-I'm Alan
-<html>
+Hello world. This is my first website!!
+
+Introduction of Tsu-Cheng, Lu
+Hello everyone, My name is Tsu-Cheng, Lu and I'm from Taiwan
+
+This is my second semester of Master program in ITM.
+
+I usually play basketball and work out, also I play video when I have a free time.
+
+I'm really exciting to learn about web design and I hope I can use this skill smartly.
