fix space problem

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-
-Hello world. This is my first website!!
-
-Introduction of Tsu-Cheng, Lu
-Hello everyone, My name is Tsu-Cheng, Lu and I'm from Taiwan
-
-This is my second semester of Master program in ITM.
-
-I usually play basketball and work out, also I play video when I have a free time.
-
-I'm really exciting to learn about web design and I hope I can use this skill smartly.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>ITMD-361 Internet Technologies and Web Design</title>
+</head>
+<body>
+<p>Hello world. This is my first website!!</p>
+<h1>Introduction of Tsu-Cheng, Lu</h1>
+<p>Hello everyone, My name is Tsu-Cheng, Lu and I'm from Taiwan</p>
+<p>This is my second semester of Master program in ITM.</p>
+<p>I usually play basketball and work out, also I play video when I have a free time.</p>
+<p>I'm really exciting to learn about web design and I hope I can use this skill smartly.</p>
+</body>
+</html>
